fixed spacing

--- a/src/views/Landing/About/About.scss
+++ b/src/views/Landing/About/About.scss
@@ -1,7 +1,7 @@
 @import "@/global/breakpoints.scss";
 
 div.About {
-  padding: 4rem 0;
+  padding: 13rem 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 1.5rem;
