--- a/src/views/Landing/Projects/Projects.scss
+++ b/src/views/Landing/Projects/Projects.scss
@@ -40,7 +40,7 @@ div.Projects {
 
   div.ProjectArea {
     display: grid;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 6rem;
 
     margin-block-start: 6rem;
